--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             user-select: none;
             display: flex;
             flex-direction: column;
-            max-height: 100vh;
+            max-height: 100%;
             color: #333;
             -webkit-tap-highlight-color: transparent;
         }
