--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
             max-height: 100%;
             color: #333;
             -webkit-tap-highlight-color: transparent;
+padding-bottom: env(safe-area-inset-bottom);
+margin-bottom: env(safe-area-inset-bottom);
         }
         .header {
             display: flex;
