--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             user-select: none;
             display: flex;
             flex-direction: column;
-            max-height: 100%;
+            max-height: 95vh;
             color: #333;
             -webkit-tap-highlight-color: transparent;
 padding-bottom: env(safe-area-inset-bottom);
